code/k8s/badvla/ranking-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badvla-ingress
  namespace: badvla
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - badman.app
      secretName: badvla-prod-certificate
  rules:
    - host: badman.app
      http:
        paths:
          - path: /
            tls: 
            pathType: Prefix
            backend:
              service:
                name: client-client
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            tls: 
            backend:
              service:
                name: server-server
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            tls: 
            backend:
              service:
                name: server-server
                port:
                  number: 80
